--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="">
 
 	<link rel="stylesheet" href="{{ css | relative_url }}">
-
+	<link href="{{ relative }}assets/css/home.css" rel="stylesheet" />
 	<link rel="stylesheet" href="assets/css/home.css">
 	<link rel="stylesheet" href="css/icon.css">
 
