--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="shortcut icon" type="image/x-icon" href="">
 
-	<link rel="stylesheet" href="{{ css | relative_url }}">
+	{% capture styles %}
+{% include  assets/css/home.css%}
+{% endcapture %}
+	<style>
+    {{ styles | scssify}}
+</style>
 	{% include base.html %}
 	<link href="{{ base }}/assets/css/home.css" rel='stylesheet'>
 	<link rel="stylesheet" href="assets/css/home.css">
