--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,10 @@
+---
+layout: null
+---
+
+@import url("pygment_highlights.css");
+
+/* --- General --- */
 
 html,body {margin:0;padding:0;height:100%; font-family: GothamPro;background:#171717;}
 
