--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="shortcut icon" type="image/x-icon" href="">
+	<link rel="stylesheet" href="{{- 'assets/css/home.css' | relative_url -}}" />
 	<link rel="stylesheet" href="{{ "/assets/css/home.css" | absolute_url }}">
 	<link rel="stylesheet" href="assets/css/home.css">
 	<link rel="stylesheet" href="css/icon.css">
