--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,21 +6,13 @@ common-js:
 ---
 
 <!DOCTYPE html>
-<html lang="{{ page.language | default: site.language | default: 'en' }}">
+<html>
 <!-- Beautiful Jekyll 5.0.0 | Copyright Dean Attali 2020 -->
 {% include head.html %}
 
 <body>
 
-  {% include gtm_body.html %}
 
-  {% include nav.html %}
-
-  {{ content }}
-
-  {% include footer.html %}
-
-  {% include footer-scripts.html %}
 
 </body>
 </html>
