--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,3 @@
----
-layout: null
----
-
-@import "{{ site.theme }}";
-
-/* --- General --- */
 
 html,body {margin:0;padding:0;height:100%; font-family: GothamPro;background:#171717;}
 
@@ -109,12 +102,26 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
     width: 478px;
 }
 .Validators .icon{
-	background: url("../img/ico-01.png");
-	width: 104px;
-	height: 104px;
 	margin: 0 auto;
 	margin-top: 26px;
 	margin-bottom: 18px;
+	width: 104px;
+	height: 104px;
+}
+.Validators .icon_c{
+	background: url("../img/icon_c.png");
+}
+.Validators .icon_k{
+	background: url("../img/icon_k.png");
+}
+.Validators .icon_s{
+	background: url("../img/icon_s.png");
+}
+.Validators .icon_a{
+	background: url("../img/icon_a.png");
+}
+.Validators .icon_p{
+	background: url("../img/icon_p.png");
 }
 .t5{
 	font-family: GothamPro;
@@ -2911,18 +2918,9 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
 	.nav li a {padding:20px 15px;line-height:40px; text-align:center; font-weight:200; font-size:18px;	 }
 	.nav li a:hover {-webkit-transition: all 0.4s;transition: all 0.4s;}
 	.shrink-nav#header {background:#181818;}
-	/*
-	.shrink-nav .global-nav {margin:0;}
-	.shrink-nav .brand {margin:8px 0;}
-	.shrink-nav .nav li.active a {color:#dfd1b5;background:#c30e23;}
 
-	.sub-nav {display:block;height:55px;background:rgba(255,255,255,.95);}
-	.sub-nav li {margin:9px 0;}
-
-	.sticky-nav .sub-nav {border-bottom:solid 1px #297abb;position:fixed;top:60px;left:0;z-index:20;}
-	.sticky-nav #about-intro, .sticky-nav #ser-intro {margin-top:0;}
 }
-	*/
+	
 
 
 @media (min-width: 768px) {
