--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,7 @@
 ---
 common-css:
-  - "/assets/css/bootstrap-social.css"
-  - "/assets/css/beautifuljekyll.css"
+  - "/assets/css/home.css"
+  - "/assets/css/stylepc.css"
 common-ext-css:
   - href: "https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     sri: "sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -16,7 +16,12 @@ common-ext-js:
   - href: "https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     sri: "sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 common-js:
-  - "/assets/js/beautifuljekyll.js"
+  - "/assets/js/jquery-1.8.3.min.js"
+  - "/assets/js/jquery-latest.js"
+  - "/assets/js/navbar.js"
+  - "/assets/js/pc.js"
+  - "/assets/js/web.core.js"
+  - "/assets/js/web.ui.js"
 ---
 
 <!DOCTYPE html>
