--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,11 @@
 <header id="header" class="home-header">
 	<div class="container">
 		<div class="global-nav">
+			<button class="navbar-toggle">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 			<a class="brand" href="index.html">SIKKA</a>
 			<nav class="navbar">
 				<ul class="nav">
