--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,11 +10,15 @@
 			<nav class="navbar">
 				<ul class="nav">
 					{%- for link in site.navbar-links -%}
-        			
+        			{%- if link[1].first %}
+					<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ link[0] }}</a>
+          </li>
+					{% else %}
 					<li class="">
 						<a href="{{ link[1] | relative_url }}" class="home-current">{{ link[0] }}</a>
 					</li>
-				
+					{%- endif -%}
                     {%- endfor -%}
 				</ul>
 			</nav>
