--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="index.html">SIKKA</a>
+			<a class="brand" href="{{ '' | absolute_url }}">SIKKA</a>
 			<nav class="navbar">
 				<ul class="nav">
 					{%- for link in site.navbar-links -%}
