--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,5 @@
+<script src="{{ "/assets/js/navbar.js" | relative_url }}"></script>
+
 <header id="header" class="home-header">
 	<div class="container">
 		<div class="global-nav">
