--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -1,16 +1,16 @@
 
 {%- if site.social-network-links.email -%}
-  <a href="mailto:{{ site.social-network-links.email }}"><img src="{{ '' | absolute_url }}img/f-email.png"/></a>
+  <a href="mailto:{{ site.social-network-links.email }}"><img src="{{ '' | absolute_url }}/img/f-email.png"/></a>
 {%- endif -%}
 
 {%- if site.social-network-links.twitter -%}
-  <a href="https://twitter.com/{{ site.social-network-links.twitter }}"><img src="{{ '' | absolute_url }}img/f-twitter.png"/></a>
+  <a href="https://twitter.com/{{ site.social-network-links.twitter }}"><img src="{{ '' | absolute_url }}/img/f-twitter.png"/></a>
 {%- endif -%}
 
 {%- if site.social-network-links.telegram -%}
-  <a href="https://t.me/{{ site.social-network-links.telegram }}"><img src="{{ '' | absolute_url }}img/f-telegram.png"/></a>
+  <a href="https://t.me/{{ site.social-network-links.telegram }}"><img src="{{ '' | absolute_url }}/img/f-telegram.png"/></a>
 {%- endif -%}
 
 {%- if site.social-network-links.keybase -%}
-  <a href="http://keybase.io//{{ site.social-network-links.keybase }}"><img src="{{ '' | absolute_url }}img/f-keybase.png"/></a>
+  <a href="http://keybase.io//{{ site.social-network-links.keybase }}"><img src="{{ '' | absolute_url }}/img/f-keybase.png"/></a>
 {%- endif -%}
