--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 			<div class="copy">© 2019 by Sikka inc.</div>
 		</div>
 		<div class="f-right">
-			Find us<a href=""> {% include social-networks-links.html %}
+			Find us {% include social-networks-links.html %}
 		</div>
 	</div>
 </footer>
