--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -1,38 +1,21 @@
-{% if layout.common-ext-js %}
-  {% for js in layout.common-ext-js %}
-    {% include ext-js.html js=js %}
-  {% endfor %}
-{% endif %}
-
-{% if layout.common-js %}
-  {% for js in layout.common-js %}
-    <!-- doing something a bit funky here because I want to be careful not to include JQuery twice! -->
-    {% if js contains 'jquery' %}
-      <script>
-        if (typeof jQuery == 'undefined') {
-          document.write('<script src="{{ js | relative_url }}"></scr' + 'ipt>');
+<script type="text/javascript">
+    var btn = [];
+    var url = []
+    var len = $(".contentIN").size();
+    for (var i = 0; i < len; i++) {
+        btn.push("#btn" + (i + 1));
+        url.push("#url" + (i + 1));
         }
-      </script>
-    {% else %}
-      <script src="{{ js | relative_url }}"></script>
-    {% endif %}
-  {% endfor %}
-{% endif %}
-
-{% if site.site-js %}
-  {% for js in site.site-js %}
-    <script src="{{ js | relative_url }}"></script>
-  {% endfor %}
-{% endif %}
-
-{% if page.ext-js %}
-  {% for js in page.ext-js %}
-    {% include ext-js.html js=js %}
-  {% endfor %}
-{% endif %}
-
-{% if page.js %}
-  {% for js in page.js %}
-    <script src="{{ js | relative_url }}"></script>
-  {% endfor %}
-{% endif %}
+    console.log(btn);
+    for(var j in btn){
+        (function(data_j){
+            $(btn[data_j]).bind("click", function () {
+                $(url[data_j]).select();
+                document.execCommand("Copy");
+				alert("复制成功")
+            });
+        })(j);
+    }
+ 
+ 
+</script>
