--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,8 @@
 common-css:
   - "/assets/css/home.css"
   - "/assets/css/stylepc.css"
+common-ext-css:
+common-ext-js:
 common-js:
   - "/assets/js/jquery-1.8.3.min.js"
   - "/assets/js/jquery-latest.js"
