--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
   <meta name="author" content="{{ site.author }}">
   {% endif %}
 
-  <meta name="description" content="{{ description }}">
+  <meta name="description" content="{{ post.description }}">
 
   {% if site.mobile-theme-col %}
   <meta name="theme-color" content="{{ site.mobile-theme-col }}">
