--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,20 +4,28 @@
 
 {% if page.cover-img or page.title %}
 
-{% if page.cover-img %}
-  <img id="header-big-imgs" src={% if page.cover-img.first %}{{ page.cover-img.size }}{% else %}1{% endif %}
-    {% for bigimg in page.cover-img %}
-    {% assign imgnum = forloop.index %}
-    {% for imginfo in bigimg %}
-      {% if imginfo[0] %}
-      src="{{ imginfo[0] | absolute_url }}"
-      src="{{ imginfo[1] }}"
-    {% else %}
-      src="{{ imginfo | absolute_url }}"
+
+{%- capture thumbnail -%}
+      {% if post.thumbnail-img %}
+        {{ post.thumbnail-img }}
+      {% elsif post.cover-img %}
+        {% if post.cover-img.first %}
+          {{ post.cover-img[0].first.first }}
+        {% else %}
+          {{ post.cover-img }}
+        {% endif %}
+      {% else %}
+      {% endif %}
+    {% endcapture %}
+
+    {% assign thumbnail=thumbnail | strip %}
+{% unless site.feed_show_excerpt == false %}
+    {% if thumbnail != "" %}
+
+        <img id="header-big-imgs" src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+     
     {% endif %}
-    {% endfor %}
-    {% endfor %}
-  />
+
 {% endif %}
 
 <header class="header-section {% if page.cover-img %}has-img{% endif %}">
