--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
       {% else %}
       {% endif %}
     {% endcapture %}
+
     {% assign thumbnail=thumbnail | strip %}
 {% unless site.feed_show_excerpt == false %}
     {% if thumbnail != "" %}
@@ -24,6 +25,7 @@
         <img id="header-big-imgs" src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
      
     {% endif %}
+{% endunless %}
 
 
 
