--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,31 +2,23 @@
 
 {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
 
+{% if page.cover-img or page.title %}
 
-
-
-{%- capture thumbnail -%}
-      {% if post.thumbnail-img %}
-        {{ post.thumbnail-img }}
-      {% elsif post.cover-img %}
-        {% if post.cover-img.first %}
-          {{ post.cover-img[0].first.first }}
-        {% else %}
-          {{ post.cover-img }}
-        {% endif %}
-      {% else %}
-      {% endif %}
-    {% endcapture %}
-
-    {% unless site.feed_show_excerpt == false %}
-    {% if thumbnail != "" %}
-
-        <img id="header-big-imgs" src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-     
+{% if page.cover-img %}
+  <div id="header-big-imgs" data-num-img={% if page.cover-img.first %}{{ page.cover-img.size }}{% else %}1{% endif %}
+    {% for bigimg in page.cover-img %}
+    {% assign imgnum = forloop.index %}
+    {% for imginfo in bigimg %}
+      {% if imginfo[0] %}
+      data-img-src-{{ imgnum }}="{{ imginfo[0] | absolute_url }}"
+      data-img-desc-{{ imgnum }}="{{ imginfo[1] }}"
+    {% else %}
+      data-img-src-{{ imgnum }}="{{ imginfo | absolute_url }}"
     {% endif %}
-{% endunless %}
-
-
+    {% endfor %}
+    {% endfor %}
+  ></div>
+{% endif %}
 
 <header class="header-section {% if page.cover-img %}has-img{% endif %}">
 {% if page.cover-img %}
