--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     {% endif %}
     {% endfor %}
     {% endfor %}
-  ></div>
+  ><img src="{{ imginfo | absolute_url }}"></div>
 {% endif %}
 
 <header class="header-section {% if page.cover-img %}has-img{% endif %}">
