--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -693,6 +693,37 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
 #footer .copy {text-align:center;color:#fff; font-size: 14px;font-weight: 600;line-height: 24px;}
 #footer .copy span {display:block;}
 
+#header-big-imgs{
+	    width: 960px;
+    margin: 0 auto;
+    height: 540px;
+    margin-top: 160px;
+}
+
+#header-big-imgs img{
+	width: 960px;
+    margin: 0 auto;
+    height: 540px;
+}
+.header-section {
+	width: 960px;
+    margin: 0 auto;
+    font-family: GothamPro-Bold;
+    font-size: 60px;
+    color: #000000;
+    text-align: center;
+    line-height: 60px;
+}
+
+.container-md {
+	width: 960px;
+    margin: 0 auto;
+    font-family: GothamPro;
+    font-size: 16px;
+    color: #FFFFFF;
+    line-height: 24px;
+}
+
 @media print, only screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-resolution: 144dpi), screen and (min-resolution: 144dppx){
 	.brand {background-image:url("../img/logo.png");}
 }
