--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -725,6 +725,11 @@ line-height: 60px;
 .picture_1 {
 	height: 202px;
     width: 100%;
+	overflow: hidden;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .picture_1 img{
 	width: 100%;
