--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -715,6 +715,14 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
     line-height: 60px;
 }
 
+.container-md  .row{
+	width: 960px;
+    margin: 0 auto;
+    font-family: GothamPro;
+    font-size: 16px;
+    color: #FFFFFF;
+    line-height: 24px;
+}
 .big-img .container-md p{
 	font-family: GothamPro-Bold;
 font-size: 60px;
