--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 
-html,body {margin:0;padding:0;height:100%; font-family: GothamPro;background:#171717;}
+html,body {margin:0;padding:0;height:100%; font-family: GothamPro ,Arial, Helvetica, sans-serif;background:#171717;}
 
 * {-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 button:focus { outline:none;}
@@ -696,14 +696,14 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
 #header-big-imgs{
 	    width: 960px;
     margin: 0 auto;
-    height: 540px;
+    
     margin-top: 160px;
 }
 
 #header-big-imgs img{
-	width: 960px;
+	width: 100%;
     margin: 0 auto;
-    height: 540px;
+    
 }
 .header-section {
 	width: 960px;
