--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -389,7 +389,7 @@
 .link2 {
     line-height: 160px;
     overflow: hidden;
-    display: table-cell;
+    display: inline-flex;
     vertical-align: middle;
     padding-left: 28px;
     padding-top: 20px;
