--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -1830,7 +1830,7 @@ overflow:hidden; resize:none;
 	.link2 {
     width: auto;
     margin: auto;
-    display: table-cell;
+    display: inline-flex;
     padding-left: 28px;
 }
 }
