--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -1538,6 +1538,12 @@ overflow:hidden; resize:none;
 	.main .content .menu1 .active {
     width: 540px;
 }
+	.link2 {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    padding-left: 0px;
+}
 }
 @media (min-width: 768px){
 	.main .menu ul li {
