--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -15,7 +15,7 @@
             $(btn[data_j]).bind("click", function () {
                 $(url[data_j]).select();
                 document.execCommand("Copy");
-				alert("复制成功")
+				alert("Copy succeeded")
             });
         })(j);
     }
