--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -795,7 +795,7 @@ line-height: 60px;
 .shrink-nav .nav li a { padding:11px 15px;}
 */
 
-.dialog {display:none;width:100%;height:100%;min-height:100%;position:fixed;top:0;left:0;z-index:1000;-webkit-transition:all .5s;transition:all .5s;}
+.dialog,.dialog1 {display:none;width:100%;height:100%;min-height:100%;position:fixed;top:0;left:0;z-index:1000;-webkit-transition:all .5s;transition:all .5s;}
 .dialog-inner {display:table-cell;vertical-align:middle;height:100%;min-height:100%;margin:0 auto;    background: #00000061;}
 .dialog-container {max-width: 780px;
     min-height: 300px;
