--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -375,6 +375,9 @@ hr {height:0;margin-top:10px;margin-bottom:10px;border:0;border-top:solid 1px #3
 	margin: 0 auto;
     margin-top: 24px;
 }
+.picture img{
+	border-radius:50%;
+}
 .team-main .t5{
 	font-family: GothamPro;
     font-size: 18px;
